Fixed another issue with create post on small screens | Added colours of blue and orange

--- a/frontend-web/src/components/CreatePost/CreatePost.css
+++ b/frontend-web/src/components/CreatePost/CreatePost.css
@@ -2,7 +2,7 @@
 	overflow-y: scroll;
 	transition: width ease-in-out 200ms;
 	width: 60vw;
-	height: 27vh;
+	height: 28vh;
 	text-align: right;
 }
 
